--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,7 @@ a {
     display: inline-block;
     position: fixed;
     top: 20px;
-    right: 30px;
+    right: 5%;
     color: #fff;
     font-size: 35px;
     font-style: italic;
@@ -729,7 +729,7 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 250px;
+    height: 350px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -756,7 +756,13 @@ a {
 }
 
 .vbox-content {
-    max-height: 90% !important;
+    width: 100%;
+    height: 80vh;
+}
+
+.venoratio {
+    width: 100%;
+    height: 100%;
 }
 
 /* ============= resume section start ============= */
